# flash

./:  build.ps1  README.md  build.sh  mvnw.cmd
flash-core/: pom.xml
flash-core/src/main/java/com/flash/: CudaBlas.java  CudaDevice.java  CudaDnn.java  CudaGemm.java  CudaOps.java  CudaRand.java  CudaTensor.java  NativeLibraryLoader.java  Precision.java
flash-core/src/main/java/com/flash/exception/: PrecisionMismatchException.java
flash-rust/: Cargo.toml
flash-rust/src/: blas.rs  cudaBlas.rs  device.rs  dnn.rs  lib.rs  ops.rs  rand.rs  tensor.rs
java-gemm-client/: pom.xml
java-gemm-client/src/main/java/com/cuda/poc/: CudaGemm.java  Main.java  NativeLibraryLoader.java
java-gemm-client/src/test/java/com/cuda/poc/: CudaGemmTest.java
rust-cuda-gemm/: Cargo.toml
rust-cuda-gemm/src/: lib.rs
tests/: pom.xml
tests/src/test/java/com/flash/test/: CudaBlasTest.java  CudaDeviceTest.java  CudaDnnTest.java  CudaGemmTest.java  CudaOpsTest.java  CudaRandTest.java  CudaTensorTest.java  EnvironmentTest.java  PrecisionTest.java
