[package]
name = "flash"
version = "0.2.0"
edition = "2021"

[lib]
name = "flash"
crate-type = ["cdylib"]

[dependencies]
# Note: cudnn feature removed - using CPU fallback for DNN operations
# Add "cudnn" feature when cuDNN 9.x is installed
cudarc = { version = "0.12", features = ["cublas", "cuda-12060", "f16"] }
half = "2.4"

[dev-dependencies]
serial_test = "3.0"

[profile.release]
lto = true
opt-level = 3