[package]
name = "flash"
version = "0.3.0"
edition = "2021"

[lib]
name = "flash"
crate-type = ["cdylib"]

[dependencies]
# Phase 3: Added curand feature for random number generation
cudarc = { version = "0.12", features = ["cublas", "curand", "cuda-12060", "f16"] }
half = "2.4"

[dev-dependencies]
serial_test = "3.0"

[profile.release]
lto = true
opt-level = 3